Fixes window height and scroll on mobile devices.

--- a/frontend/scss/pages/_home.scss
+++ b/frontend/scss/pages/_home.scss
@@ -16,7 +16,7 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -83,5 +83,11 @@
     text-align: center;
     color: white;
     padding-bottom: 3rem;
+  }
+
+  &.is-scrollable {
+    section {
+      height: 100%;
+    }
   }
 }
